// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="AppMenu-root-107"
>
  <header
    className="MuiPaper-root-122 MuiPaper-elevation4-128 MuiAppBar-root-114 MuiAppBar-positionFixed-115 MuiAppBar-colorPrimary-120 mui-fixed"
  >
    <div
      className="MuiToolbar-root-149 MuiToolbar-regular-151 MuiToolbar-gutters-150 AppMenu-nowrap-109"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-159 MuiIconButton-root-153 MuiIconButton-colorInherit-154 AppMenu-menuButton-110"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-158"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-162"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-169"
        />
      </button>
      <h2
        className="MuiTypography-root-176 MuiTypography-title-182 MuiTypography-colorInherit-195 AppMenu-flex-108"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="AppMenu-spacer-112"
  />
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="AppMenu-root-107"
>
  <header
    className="MuiPaper-root-122 MuiPaper-elevation4-128 MuiAppBar-root-114 MuiAppBar-positionStatic-118 MuiAppBar-colorPrimary-120"
  >
    <div
      className="MuiToolbar-root-149 MuiToolbar-regular-151 MuiToolbar-gutters-150 AppMenu-nowrap-109"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-159 MuiIconButton-root-153 MuiIconButton-colorInherit-154 AppMenu-menuButton-110"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-158"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-162"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-169"
        />
      </button>
      <h2
        className="MuiTypography-root-176 MuiTypography-title-182 MuiTypography-colorInherit-195 AppMenu-flex-108"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="AppMenu-pad-113"
  />
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div
  className="AppMenu-root-107"
>
  <header
    className="MuiPaper-root-122 MuiPaper-elevation4-128 MuiAppBar-root-114 MuiAppBar-positionFixed-115 MuiAppBar-colorPrimary-120 mui-fixed"
  >
    <div
      className="MuiToolbar-root-149 MuiToolbar-regular-151 MuiToolbar-gutters-150 AppMenu-nowrap-109"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-159 MuiIconButton-root-153 MuiIconButton-colorInherit-154 AppMenu-menuButton-110"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-158"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-162"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-169"
        />
      </button>
      <h2
        className="MuiTypography-root-176 MuiTypography-title-182 MuiTypography-colorInherit-195 AppMenu-flex-108"
      >
        Test
      </h2>
      <div>
        <button>
          test
        </button>
      </div>
    </div>
  </header>
  <div
    className="AppMenu-spacer-112"
  />
</div>
`;
